# korpus

./: .gitignore  CMakeLists.txt  build_corpus.cc  corpus.cc  corpus.h  document.cc  document.h  document_test.cc  index.cc  index.h  korpus.cc  lexeme.cc  lexeme.h  lexeme.proto  lexeme_test.cc  questioner.cc  result.cc  result.h
korpus/: CMakeLists.txt  corpus.cc  corpus.h  document.cc  document_test.cc  index.cc  index.h  lexeme.cc  lexeme.h  lexeme_test.cc  result.cc
questioner/: CMakeLists.txt  deck.h  http_server.cc  http_server.h  question.cc  question.h  question_builder.cc  question_builder.h  question_server.cc  question_server.h  questioner.cc  scheduler.cc  scheduler.h
questioner/html_templates/: index.tpl  practice.tpl
